--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -19,8 +19,11 @@ allow_origins = ["*"]
 # follow_symlink = false
 
 [features]
+# Show the prompt playground
+prompt_playground = true
+
 # Process and display HTML in messages. This can be a security risk (see https://stackoverflow.com/questions/19603097/why-is-it-dangerous-to-render-user-generated-html-or-javascript)
-unsafe_allow_html = false
+unsafe_allow_html = true
 
 # Process and display mathematical expressions. This can clash with "$" characters in messages.
 latex = false
@@ -28,36 +31,34 @@ latex = false
 # Automatically tag threads with the current chat profile (if a chat profile is used)
 auto_tag_thread = true
 
-# Authorize users to spontaneously upload files with messages
-[features.spontaneous_file_upload]
+# Authorize users to upload files with messages
+[features.multi_modal]
     enabled = true
     accept = ["*/*"]
     max_files = 20
     max_size_mb = 500
 
-[features.audio]
-    # Threshold for audio recording
-    min_decibels = -45
-    # Delay for the user to start speaking in MS
-    initial_silence_timeout = 3000
-    # Delay for the user to continue speaking in MS. If the user stops speaking for this duration, the recording will stop.
-    silence_timeout = 1500
-    # Above this duration (MS), the recording will forcefully stop.
-    max_duration = 15000
-    # Duration of the audio chunks in MS
-    chunk_duration = 1000
-    # Sample rate of the audio
-    sample_rate = 44100
+# Allows user to use speech to text
+[features.speech_to_text]
+    enabled = false
+    # See all languages here https://github.com/JamesBrill/react-speech-recognition/blob/HEAD/docs/API.md#language-string
+    # language = "en-US"
 
 [UI]
-# Name of the assistant.
-name = "Assistant"
+# Name of the app and chatbot.
+name = "ResarchBot"
 
-# Description of the assistant. This is used for HTML tags.
+# Show the readme while the thread is empty.
+show_readme_as_default = true
+
+# Description of the app and chatbot. This is used for HTML tags.
 # description = ""
 
 # Large size content are by default collapsed for a cleaner ui
-default_collapse_content = true
+default_collapse_content = false
+
+# The default value for the expand messages settings.
+default_expand_messages = false
 
 # Hide the chain of thought details from the user in the UI.
 hide_cot = false
@@ -76,43 +77,33 @@ hide_cot = false
 # Specify a custom font url.
 # custom_font = "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
 
-# Specify a custom meta image url.
-# custom_meta_image_url = "https://chainlit-cloud.s3.eu-west-3.amazonaws.com/logo/chainlit_banner.png"
-
 # Specify a custom build directory for the frontend.
 # This can be used to customize the frontend code.
 # Be careful: If this is a relative path, it should not start with a slash.
 # custom_build = "./public/build"
 
-[UI.theme]
-    default = "dark"
-    #layout = "wide"
-    #font_family = "Inter, sans-serif"
 # Override default MUI light theme. (Check theme.ts)
+[UI.theme]
+    #font_family = "Inter, sans-serif"
 [UI.theme.light]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
+    background = "#FFFFFF"
+    paper = "#F5F5F5"
 
     [UI.theme.light.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
-    [UI.theme.light.text]
-        #primary = "#212121"
-        #secondary = "#616161"
+        main = "#6200EA"
+        dark = "#3700B3"
+        light = "#BB86FC"
 
-# Override default MUI dark theme. (Check theme.ts)
+
+# Override default MUI dark theme.
 [UI.theme.dark]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
+    background = "#121212"
+    paper = "#1E1E1E"
 
     [UI.theme.dark.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
-    [UI.theme.dark.text]
-        #primary = "#EEEEEE"
-        #secondary = "#BDBDBD"
+        main = "#BB86FC"
+        dark = "#3700B3"
+        light = "#6200EA"
 
 [meta]
-generated_by = "1.1.300rc5"
+generated_by = "1.0.506"
