--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 chainlit==1.1.301
 google-generativeai==0.5.4
+pandasai==2.2.5
 llama-index==0.10.44
 llama-index-experimental==0.1.3
 llama-index-indices-managed-llama-cloud==0.1.6
