--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ llama-index-llms-openai==0.1.22
 llama-index-llms-openai-like==0.1.3
 llama-index-multi-modal-llms-openai==0.1.6
 llama-index-program-openai==0.1.6
+dotenv
