--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,6 @@ llama-index-llms-openai==0.1.22
 llama-index-llms-openai-like==0.1.3
 llama-index-multi-modal-llms-openai==0.1.6
 llama-index-program-openai==0.1.6
-dotenv
+python-dotenv==1.0.1
+tabulate==0.9.0
+seaborn==0.13.2
