--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,186 @@
+aiofiles==23.2.1
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==3.7.1
+astor==0.8.1
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+asyncer==0.0.2
+attrs==23.2.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+cachetools==5.3.3
+certifi==2024.6.2
+cffi==1.16.0
 chainlit==1.1.301
+charset-normalizer==3.3.2
+chevron==0.14.0
+click==8.1.7
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+contourpy==1.2.1
+cryptography==42.0.8
+cycler==0.12.1
+dataclasses-json==0.5.14
+debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1707444401483/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+Deprecated==1.2.14
+dirtyjson==1.0.8
+distro==1.9.0
+duckdb==0.10.3
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
+Faker==19.13.0
+fastapi==0.110.3
+filelock==3.15.1
+filetype==1.2.0
+fonttools==4.53.0
+frozenlist==1.4.1
+fsspec==2024.6.0
+google-ai-generativelanguage==0.6.4
+google-api-core==2.19.0
+google-api-python-client==2.133.0
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
 google-generativeai==0.5.4
-pandasai==2.2.5
-llama-index==0.10.44
+googleapis-common-protos==1.63.1
+greenlet==3.0.3
+grpcio==1.64.1
+grpcio-status==1.62.2
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+huggingface-hub==0.23.3
+idna==3.7
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1717717528849/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1717182742060/work
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1716472197302/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1710257406420/work
+kiwisolver==1.4.5
+Lazify==0.4.0
+literalai==0.0.604
+llama-cloud==0.0.11
+llama-index==0.10.58
+llama-index-agent-llm-compiler==0.1.0
+llama-index-agent-openai==0.2.7
+llama-index-cli==0.1.12
+llama-index-core==0.10.58
+llama-index-embeddings-openai==0.1.10
 llama-index-experimental==0.1.3
-llama-index-indices-managed-llama-cloud==0.1.6
+llama-index-indices-managed-llama-cloud==0.2.7
+llama-index-legacy==0.9.48
 llama-index-llms-gemini==0.1.10
 llama-index-llms-groq==0.1.4
 llama-index-llms-ollama==0.1.5
-llama-index-llms-openai==0.1.22
+llama-index-llms-openai==0.1.27
 llama-index-llms-openai-like==0.1.3
 llama-index-multi-modal-llms-openai==0.1.6
-llama-index-program-openai==0.1.27
+llama-index-program-openai==0.1.6
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.25
+llama-index-readers-llama-parse==0.1.4
+llama-parse==0.4.4
+llamaindex-py-client==0.1.19
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+matplotlib==3.9.0
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+multidict==6.0.5
+mypy-extensions==1.0.0
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+networkx==3.3
+nltk==3.8.1
+numpy==1.26.4
+openai==1.37.0
+opentelemetry-api==1.25.0
+opentelemetry-exporter-otlp==1.25.0
+opentelemetry-exporter-otlp-proto-common==1.25.0
+opentelemetry-exporter-otlp-proto-grpc==1.25.0
+opentelemetry-exporter-otlp-proto-http==1.25.0
+opentelemetry-instrumentation==0.46b0
+opentelemetry-proto==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
+packaging==23.2
+pandas==1.5.3
+pandasai==2.2.5
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+patsy==0.5.6
+pdfminer.six==20231228
+pdfplumber==0.11.1
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pillow==10.3.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
+proto-plus==1.23.0
+protobuf==4.25.3
+psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1705722396628/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.7.4
+pydantic_core==2.18.4
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+PyJWT==2.8.0
+pyparsing==3.1.2
+pypdf==4.2.0
+pypdfium2==4.30.0
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
 python-dotenv==1.0.1
-tabulate==0.9.0
+python-engineio==4.9.1
+python-multipart==0.0.9
+python-socketio==5.11.2
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1715024373784/work
+regex==2024.5.15
+requests==2.32.3
+rsa==4.9
+safetensors==0.4.3
+scikit-learn==1.5.0
+scipy==1.13.1
 seaborn==0.13.2
+setuptools==70.0.0
+simple-websocket==1.0.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.30
+sqlglot==25.1.0
+sqlglotrs==0.2.6
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+starlette==0.37.2
+statsmodels==0.14.2
+striprtf==0.0.26
+syncer==2.0.3
+tabulate==0.9.0
+tenacity==8.3.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
+tokenizers==0.19.1
+tomli==2.0.1
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1717722879218/work
+tqdm==4.66.4
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+transformers==4.41.2
+typing-inspect==0.9.0
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
+tzdata==2024.1
+uptrace==1.24.0
+uritemplate==4.1.1
+urllib3==2.2.1
+uvicorn==0.25.0
+watchfiles==0.20.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+wheel==0.43.0
+wrapt==1.16.0
+wsproto==1.2.0
+yarl==1.9.4
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1718013267051/work
